# MultiTool

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  MultiTool.sln
MultiTool/: MultiTool.vcxproj  MultiTool.vcxproj.filters  imgui.ini  imgui_log.txt  main.cpp
libs/: SDL2.exp  SDL2main.lib
src/: main.cpp  test.h
